--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
-		<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset/reset-min.css" />
-		<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/base/base-min.css" />
-		<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/fonts/fonts-min.css" />
-		<base href="http://projectbaird.com/">
-		<link rel="stylesheet" type="text/css" href="/screen.css" media="screen" />
-		<link rel="stylesheet" type="text/css" href="/print.css" media="print" />
+		<meta charset="UTF-8">
+		<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+		<link rel="canonical" href="http://projectbaird.com/{{ page.path }}">
+		<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset/reset-min.css">
+		<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/base/base-min.css">
+		<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/fonts/fonts-min.css">
+		<link rel="stylesheet" type="text/css" href="{{ site.url }}/screen.css" media="screen">
+		<link rel="stylesheet" type="text/css" href="{{ site.url }}/print.css" media="print">
 		<title>{{ page.title }} &bull; Project Baird</title>
+		<meta name="google-site-verification" content="2lN805mKFfcgb-R7RvFKTntgr1eNuXpomvPsyaxiXmU" />
 	</head>
 	<body class="default">
 		<div id="surround">
 			<h1>Project Baird</h1>
 			<ul id="contents" class="no-print">
-				<li><a href="/">Introduction</a></li>
-				<li><a href="/aims/">Aims</a></li>
-				<li><a href="/specs/">Specifications</a></li>
-				<li><a href="/getting-involved/">Getting Involved</a></li>
+				<li><a href="{{ site.url }}/">Introduction</a></li>
+				<li><a href="{{ site.url }}/aims/">Aims</a></li>
+				<li><a href="{{ site.url }}/specs/">Specifications</a></li>
+				<li><a href="{{ site.url }}/getting-involved/">Getting Involved</a></li>
 			</ul>
 			<div class="section">
 				<h2>{{ page.title }}</h2>
