Link to Walkthroughs section from the main nav.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
 				<li><a href="{{ site.url }}/aims/">Aims</a></li>
 				<li><a href="{{ site.url }}/specs/">Specifications</a></li>
 				<li><a href="{{ site.url }}/getting-involved/">Getting Involved</a></li>
+				<li><a href="{{ site.url }}/walkthroughs/">Walkthroughs</a></li>
 			</ul>
 			<div class="section">
 				<h2>{{ page.title }}</h2>
