--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 	</head>
 	<body class="default">
 		<div id="surround">
-			<h1>Project Baird</h1>
+			<h1><span id="caption">This is Project Baird.</span><span id="logo"></span></h1>
 			<ul id="contents" class="no-print">
 				<li><a href="{{ site.url }}/">Introduction</a></li>
 				<li><a href="{{ site.url }}/aims/">Aims</a></li>
