--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 		<link rel="canonical" href="http://projectbaird.com/{{ page.path }}">
+		<link rel="shortcut icon" href="/logo16.gif" type="image/gif">
 		<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset/reset-min.css">
 		<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/base/base-min.css">
 		<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/fonts/fonts-min.css">
