--- a/boxify/view.phtml
+++ b/boxify/view.phtml
@@ -120,22 +120,10 @@
 			?>
 <?php
 }
-
-$c = 0;
-foreach($targets as $fqdn => $target)
-{
-	$c++;
 ?>
-			<div class="section">
-				<h2 id="target-<?php e($c); ?>">#<?php e($c); ?>: <code><?php e($fqdn); ?></code></h2>
-<?php print_r($target); ?>
-			</div>
-<?php
-}
- ?>
 		</div>
 		<div id="footer"> 
-			<p>Copyright © 2009-2010. Dèanta ann an Alba.</p> 
+			<p>Copyright © 2010. Dèanta ann an Alba.</p> 
 		</div> 		
 		<script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
