--- a/screen.css
+++ b/screen.css
@@ -90,20 +90,38 @@ p#contents {
 	padding: 0 1em 0 1em; 
 }
 #contents li {
-	display: inline;
+	display: inline-block;
 	line-height: 2em;
+	height: 2em;
+	margin: 0;
+	padding: 0;
+	list-style: none;
 }
-#contents a:link, #contents a:visited {
+#contents a {
+	display: block;
+	padding: 0 0.75em 0 0.75em;
 	color: #efefef;
 	font-weight: normal;
 	height: 2em;
 	color: #ccc;
 }
 #contents a:hover, #contents a:active {
+	background: #333;
 	color: #fff;
 	text-decoration: underline;
 }
-
+#contents li.active {
+	background-color: #000;
+	color: #fff;
+	font-weight: bold;
+}
+#contents li.active a {
+	color: #fff;
+	font-weight: bold;
+}
+#contents li.active a:hover {
+	background: #000;
+}
 .section {
 	padding: 1em;
 	background: #fff;
@@ -114,12 +132,6 @@ p#contents {
 .section h2 {
 	margin: 0 0 0.75em 0;
 	color: #444;
-}
-
-#contents li {
-	margin: 0;
-	padding: 0.75em;
-	list-style: none;
 }
 
 .section p {
@@ -179,12 +191,3 @@ blockquote {
 table.refs {
 	border: none;
 }
-table.refs td, table.refs th {
-	padding: 1em;
-	border: none;
-}
-
-ol.preface li {
-	list-style-type: lower-roman;
-}
-
