--- a/delve/form.phtml
+++ b/delve/form.phtml
@@ -13,7 +13,7 @@ if(!isset($location))
 <div class="section">
 	<h2>Delve service</h2>
 	<p>
-	This service fetches an RDF resource and returns the list of subject
+	This service fetches an RDF/XML resource and returns the list of subject
 	URIs referenced by it.
 	</p>
 	<p>
